changing the way that manage roles and permission, create entities for this, and config all necessary for that work